--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
     <script src="./shader.gpu"></script>
     <script src="./main.js"></script>
     <script src="./model.js"></script>
+    <script src="./textureHandler.js"></script>
 
 </head>
 
